@@ -64,6 +64,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|Reader
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|StringReader
 import|;
 end_import
@@ -126,6 +136,20 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|CannedTokenStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|MockAnalyzer
 import|;
 end_import
@@ -155,6 +179,78 @@ operator|.
 name|analysis
 operator|.
 name|MockTokenizer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|TokenFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|TokenStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Tokenizer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
+name|CharTermAttribute
 import|;
 end_import
 
@@ -495,6 +591,20 @@ operator|.
 name|search
 operator|.
 name|RegexpQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|TermQuery
 import|;
 end_import
 
@@ -1942,7 +2052,7 @@ argument_list|()
 operator|.
 name|nextInt
 argument_list|(
-literal|3
+literal|4
 argument_list|)
 condition|)
 block|{
@@ -1986,6 +2096,52 @@ argument_list|,
 literal|true
 argument_list|)
 return|;
+case|case
+literal|2
+case|:
+return|return
+operator|new
+name|Analyzer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|TokenStreamComponents
+name|createComponents
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
+name|Reader
+name|reader
+parameter_list|)
+block|{
+name|Tokenizer
+name|tokenizer
+init|=
+operator|new
+name|MockTokenizer
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+return|return
+operator|new
+name|TokenStreamComponents
+argument_list|(
+name|tokenizer
+argument_list|,
+operator|new
+name|CrazyTokenFilter
+argument_list|(
+name|tokenizer
+argument_list|)
+argument_list|)
+return|;
+block|}
+block|}
+return|;
 default|default:
 return|return
 operator|new
@@ -2003,6 +2159,99 @@ argument_list|)
 return|;
 block|}
 block|}
+comment|// a tokenfilter that makes all terms starting with 't' empty strings
+DECL|class|CrazyTokenFilter
+specifier|static
+specifier|final
+class|class
+name|CrazyTokenFilter
+extends|extends
+name|TokenFilter
+block|{
+DECL|field|termAtt
+specifier|final
+name|CharTermAttribute
+name|termAtt
+init|=
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+DECL|method|CrazyTokenFilter
+name|CrazyTokenFilter
+parameter_list|(
+name|TokenStream
+name|input
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|input
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|incrementToken
+specifier|public
+name|boolean
+name|incrementToken
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|input
+operator|.
+name|incrementToken
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|termAtt
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+operator|&&
+name|termAtt
+operator|.
+name|buffer
+argument_list|()
+index|[
+literal|0
+index|]
+operator|==
+literal|'t'
+condition|)
+block|{
+name|termAtt
+operator|.
+name|setLength
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|true
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+block|}
+empty_stmt|;
 comment|/**    * Some terms to be indexed, in addition to random words.     * These terms are commonly used in the queries.     */
 DECL|field|TEST_TERMS
 specifier|private
@@ -3459,6 +3708,83 @@ name|lineFileDocs
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+comment|// LUCENE-4880
+DECL|method|testEmptyString
+specifier|public
+name|void
+name|testEmptyString
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|MemoryIndex
+name|memory
+init|=
+operator|new
+name|MemoryIndex
+argument_list|()
+decl_stmt|;
+name|memory
+operator|.
+name|addField
+argument_list|(
+literal|"foo"
+argument_list|,
+operator|new
+name|CannedTokenStream
+argument_list|(
+operator|new
+name|Token
+argument_list|(
+literal|""
+argument_list|,
+literal|0
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+name|memory
+operator|.
+name|createSearcher
+argument_list|()
+decl_stmt|;
+name|TopDocs
+name|docs
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|""
+argument_list|)
+argument_list|)
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|docs
+operator|.
+name|totalHits
+argument_list|)
 expr_stmt|;
 block|}
 block|}
